работа с дебагером+ работа по замечаниям осталось несколько тестов поправить