@@ -1,9 +1,7 @@
 package faang.school.projectservice.validator.moment;
 
 import faang.school.projectservice.dto.moment.MomentDto;
-import faang.school.projectservice.mapper.moment.MomentMapper;
-import io.micrometer.common.util.StringUtils;
-import jakarta.persistence.EntityNotFoundException;
+import faang.school.projectservice.exception.DataValidationException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -13,13 +11,13 @@ import java.util.List;
 @RequiredArgsConstructor
 public class MomentValidator {
 
-    public void MomentValidatorName(MomentDto momentDto) {
-        if (StringUtils.isBlank(momentDto.getName())) {
-            throw new EntityNotFoundException("Moment must have a non-blank name");
+    public void validatorMomentName(MomentDto momentDto) {
+        if ((momentDto.getName().isBlank())) {
+            throw new DataValidationException("Moment must have a non-blank name");
         }
     }
 
-    public void MomentValidatorProject(MomentDto momentDto) {
+    public void validatorProjectOfMoment(MomentDto momentDto) {
         List<Long> projectIds = momentDto.getProjectIds();
         if (projectIds == null || projectIds.isEmpty()) {
             throw new IllegalArgumentException("Moment has not projectIds");
